# fuzzy_news2-api

./: .gitignore  README.md  pyproject.toml
fuzzy_news2/: __init__.py  api.py  custom_fuzzy.py  fuzzy_logic.py  news2.py  utils.py
tests/: __init__.py  conftest.py  pytest.ini  test_api.py  test_basic_fuzzy.py  test_fuzzy_logic.py  test_news2.py  test_utils.py
